gap fix

--- a/src/components/Prom/__prom.scss
+++ b/src/components/Prom/__prom.scss
@@ -8,7 +8,7 @@
   &__container {
     display: flex;
     flex-direction: column;
-    gap: 30px;
+    gap: 8px;
   }
 
   & h1 {
@@ -34,7 +34,7 @@
   }
 
   & p {
-    font-size: 25px;
+    font-size: 19px;
     width: 554px;
     text-transform: uppercase;
     font-weight: 600;
